--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Студия</title>
-    <link rel="stylesheet" href="./sass/base/_normalize.scss" />
+    <!-- <link rel="stylesheet" href="./sass/base/_normalize.scss" /> -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="css/main.min.css" />
   </head>
   <body>
-    <!-- Шапка -->
+    <!--Шапка-->
 
     <header>
       <div class="container nav">
-        <a class="logo header" href="#" lang="en">
-          <span class="web">Web</span>Studio
-        </a>
+        <a class="logo header" href="#" lang="en"
+          ><span class="web">Web</span>Studio</a
+        >
         <ul class="nav-link">
           <li class="header-item">
             <a class="header-link current" href="./index.html">Студия</a>
@@ -53,7 +53,7 @@
       </div>
     </header>
 
-    <!-- Hero -->
+    <!--Герой-->
 
     <main>
       <section class="hero-section">
@@ -143,7 +143,7 @@
         </div>
       </section>
 
-      <!-- особенности -->
+      <!--особенности-->
 
       <section class="features">
         <div class="container">
@@ -201,7 +201,7 @@
         </div>
       </section>
 
-      <!--чем мы занимаемся -->
+      <!--чем мы занимаемся-->
 
       <section class="about-company">
         <div class="container company">
@@ -554,6 +554,6 @@
         </div>
       </div>
     </footer>
-    <script src="/js/modal.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
