--- a/portfolio.html
+++ b/portfolio.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>портфолио</title>
-    <link rel="stylesheet" href="./sass/base/_normalize.scss" />
+    <!-- <link rel="stylesheet" href="./sass/base/_normalize.scss" /> -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="css/main.min.css" />
   </head>
   <body>
     <!--Шапка-->
 
     <header>
       <div class="container nav">
-        <a class="logo header" href="#" lang="en">
-          <span class="web">Web</span>Studio
-        </a>
+        <a class="logo header" href="#" lang="en"
+          ><span class="web">Web</span>Studio</a
+        >
         <ul class="nav-link">
           <li class="header-item">
             <a class="header-link" href="./index.html">Студия</a>
@@ -79,7 +79,7 @@
         <div class="container list">
           <ul class="port-box">
             <li class="port-container">
-              <a class="example-link" href="#">
+              <a class="card-link" href="#">
                 <div class="port-card">
                   <img
                     src="./photo/photo1.jpg"
@@ -100,7 +100,7 @@
               </a>
             </li>
             <li class="port-container">
-              <a class="example-link" href="#">
+              <a class="card-link" href="#">
                 <div class="port-card">
                   <img
                     src="./photo/photo2.jpg"
@@ -122,7 +122,7 @@
               </a>
             </li>
             <li class="port-container">
-              <a class="example-link" href="#">
+              <a class="card-link" href="#">
                 <div class="port-card">
                   <img
                     src="./photo/photo3.jpg"
@@ -144,7 +144,7 @@
               </a>
             </li>
             <li class="port-container">
-              <a class="example-link" href="#">
+              <a class="card-link" href="#">
                 <div class="port-card">
                   <img
                     src="./photo/photo4.jpg"
@@ -166,7 +166,7 @@
               </a>
             </li>
             <li class="port-container">
-              <a class="example-link" href="#">
+              <a class="card-link" href="#">
                 <div class="port-card">
                   <img
                     src="./photo/photo5.jpg"
@@ -188,7 +188,7 @@
               </a>
             </li>
             <li class="port-container">
-              <a class="example-link" href="#">
+              <a class="card-link" href="#">
                 <div class="port-card">
                   <img
                     src="./photo/photo6.jpg"
@@ -210,7 +210,7 @@
               </a>
             </li>
             <li class="port-container">
-              <a class="example-link" href="#">
+              <a class="card-link" href="#">
                 <div class="port-card">
                   <img
                     src="./photo/photo7.jpg"
@@ -232,7 +232,7 @@
               </a>
             </li>
             <li class="port-container">
-              <a class="example-link" href="#">
+              <a class="card-link" href="#">
                 <div class="port-card">
                   <img
                     src="./photo/photo8.jpg"
@@ -254,7 +254,7 @@
               </a>
             </li>
             <li class="port-container">
-              <a class="example-link" href="#">
+              <a class="card-link" href="#">
                 <div class="port-card">
                   <img
                     src="./photo/photo9.jpg"
